<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#126E6B64"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp">


            <ImageView
                android:id="@+id/flag_image"
                android:layout_width="152dp"
                android:layout_height="112dp"
                android:contentDescription="@string/image_of_the_country_flag"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.702" />

            <TextView
                android:id="@+id/country_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/country"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/region"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/population"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/population"
                android:textAlignment="viewStart"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subregion" />

            <TextView
                android:id="@+id/region"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/region"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/capital_city"
                app:layout_constraintEnd_toStartOf="@+id/flag_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country_name" />

            <TextView
                android:id="@+id/subregion"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/subregion"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/population"
                app:layout_constraintEnd_toStartOf="@+id/flag_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timezones" />

            <TextView
                android:id="@+id/timezones"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/timezones"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/subregion"
                app:layout_constraintEnd_toStartOf="@+id/flag_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/capital_city" />

            <TextView
                android:id="@+id/capital_city"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/capital_city"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/timezones"
                app:layout_constraintEnd_toStartOf="@+id/flag_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/region" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>